tests/negative/03_mut_immut_conflict.nova
// EXPECT-ERROR: "error"
fn main() -> i32 {
    let x: i32 = 42;
    let y = &x;
    let z = &mut x;  // error
    return 0;
}
